feat(CAT-FR-GD-01): fix some IDE warnings